fixed an issue where project cards were off center on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,7 @@
 }
 .myWork{
     display: grid;    
-    grid-template-columns: repeat( auto-fit, minmax(400px,1fr));
+    grid-template-columns: repeat( auto-fit, minmax(300px,1fr));
     place-items: center;
 }
 .icons > *{
@@ -107,5 +107,6 @@ footer > .icons{
 @media (min-width: 850px) {
     .myWork{
         margin: 1rem;
+        grid-template-columns: repeat( auto-fit, minmax(400px,1fr));
     } 
 }
